--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h1 id="t1">Game developer and digital designer</h1>
         <p>Vitor Gonçalves Rodrigues</p>
         <p id="go">Go to my page created with React.js</p>
-        <button><a id="button-go" href="https://vitor7goncalves.cf/">Access</a></button>
+        <button><a id="button-go" href="https://www.vitor7goncalves.cf/">Access</a></button>
       </div>
     </header>
     <div class="sessao-header-about-me">
