--- a/index.html
+++ b/index.html
@@ -35,14 +35,16 @@
         <button><a id="button-go" href="https://www.vitor7goncalves.cf/">Access</a></button>
       </div>
     </header>
-    <div class="sessao-header-about-me">
-      <h1 id="t2">About me</h1><br>
-    </div>
+
     <div class="about-me-sessao">
+      <div class="sessao-header-about-me">
+        <h1 id="t2">About me</h1><br>
+      </div>
       <div class="about-me-filho">
         <img src="img/img/me.png" alt="" class="me">
         <div class="conhecimento-text">
-          <p id="t3" class="about-me-text">My name is Vitor Gonçalves Rodrigues, I was born in Rio de Janeiro on May 2, 1982, I
+          <p id="t3" class="about-me-text">My name is Vitor Gonçalves Rodrigues, I was born in Rio de Janeiro on May 2,
+            1982, I
             live in Ribeirão Preto in the state of São Paulo.
             I'm a developer and game designer. A little over 2 years ago I decided to migrate to digital
             art. I worked in a startup that has an e-commerce project for 9 months. Today I work on game projects as a
@@ -54,10 +56,10 @@
         </div>
       </div>
       <section class="sessao-conhecimentos">
-        <div class="sessao-header">
-          <h1 id="t4">Features</h1><br>
-        </div>
         <div class="features-area">
+          <div class="sessao-header">
+            <h1 id="t4">Features</h1><br>
+          </div>
           <div class="conhecimentos">
             <div class="coluna1">
               <div class="conhecimento">
@@ -78,9 +80,12 @@
                   <h3>Adobe Photoshop</h3>
                 </div>
                 <div class="conhecimento-text">
-                  <p class="p-1">Adobe photoshop is used to create digital art. The version I'm currently working on is 2019. 
-                    All the art I created in my projects was 97% through Photoshop. As I said about myself, I migrated about
-                    2 years ago to digital art. Because I spent my whole life drawing and painting in a conventional way.</p>
+                  <p class="p-1">Adobe photoshop is used to create digital art. The version I'm currently working on is
+                    2019.
+                    All the art I created in my projects was 97% through Photoshop. As I said about myself, I migrated
+                    about
+                    2 years ago to digital art. Because I spent my whole life drawing and painting in a conventional
+                    way.</p>
                 </div>
               </div>
               <div class="conhecimento">
@@ -139,10 +144,10 @@
           </div>
       </section>
       <section class="sessao-projetos">
-        <div class="sessao-header-card">
-          <h1 id="t5">Projets</h1>
-        </div>
         <div class="section-project">
+          <div class="sessao-header-card">
+            <h1 id="t5">Projets</h1>
+          </div>
           <div class="projets-video">
             <iframe class="video-sessao1" src="https://www.youtube.com/embed/2Op61l0WatY" title="YouTube video player"
               frameborder="0"
@@ -153,7 +158,8 @@
               <p class="p-6">Magus Pocus is a 2D platform game. I created it a few months ago and it took 6 months for
                 it to be
                 completed. I developed it from scratch and all art and programming was done by me.</p>
-              <a href="https://store.steampowered.com/app/2101760/Magus_Pocus/" class="button-link" id="button0">Know more</a>
+              <a href="https://store.steampowered.com/app/2101760/Magus_Pocus/" class="button-link" id="button0">Know
+                more</a>
             </div>
           </div>
         </div>
@@ -169,7 +175,8 @@
                 Contains 3
                 variations of stems and coconut tree tops for you to combine and create different types of coconut
                 trees, bushes, beach background, rocks and ground.</p>
-              <a href="https://assetstore.unity.com/publishers/78812?preview=1" class="button-link" id="button1">Know more</a>
+              <a href="https://assetstore.unity.com/publishers/78812?preview=1" class="button-link" id="button1">Know
+                more</a>
             </div>
           </div>
         </div>
