--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
           <a href="https://github.com/vitor7goncalves"><i class="fab fa-github-square"></i></a>
           <a href="https://www.instagram.com/goncalvesvitor7/"><i class="fab fa-instagram-square"></i></a>
           <a href="https://www.linkedin.com/in/vitor-gon%C3%A7alves-rodrigues-1aa9b4110/"><img style="width: 1.8rem;"
-              src="img/img/linkedin_icon_135436.png" alt=""></i></a>
+              src="img/img/linkedin_ico.png" alt=""></i></a>
         </div>
       </section>
       <footer class="session-footer">
